# HADocs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GENERATOR_PATCH.md  README.md  ROADMAP.md  SECURITY.md  config.example.json  docker-compose.yml  main.py  pyproject.toml  repository.yaml  requirements.txt  tools_apply_desktop_experience.py  tools_apply_v0_10_patch.py  tools_apply_v0_11_patch.py  tools_apply_v0_12_patch.py  tools_apply_v0_13_patch.py  tools_apply_v0_14_patch.py  tools_apply_v0_15_patch.py  tools_cleanup.py
.github/: PULL_REQUEST_TEMPLATE.md
config/: device_overrides.example.json
docker/: hadocs.env.example
docs/: 00-Vision.md  01-Roadmap.md  02-Architecture.md  AI.md  ARCHITECTURE.md  CLEANUP.md  CLEANUP_SPRINT.md  CONFIGURATION.md  DESKTOP_EXPERIENCE.md  FAQ.md  FINAL_SLEEP_PATCH.md  GITHUB_SETUP.md  GUI_UX.md  HEALTH_SCORE_BREAKDOWN_EXPORT.md  INSTALL.md  ISSUE_4_STEP3_AREA_FILENAME.md  ISSUE_4_UNASSIGNED_AREA_LABELS.md  LOGO_LOG_DIRECT_FIX.md  PRIVACY.md  PROFESSIONAL_UI.md  PROJECT_PRINCIPLES.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_v1.0.0.md  ROADMAP.md  SECURITY.md  SMART_DASHBOARD_UI.md  TESTING.md  UNICODE_ENCODING_AUDIT.md  UNICODE_STEP1_AUDIT.md  V013_HEALTH_ENGINE_CLEAN.md  V014_EXPLAIN_THIS_FIX.md  V014_INTELLIGENCE_FOUNDATION.md  V101_DASHBOARD_ENGINE_V2_FAST.md  V101_HTML_DASHBOARD_OUTPUT_FIX.md  V101_RESTORE_PROFESSIONAL_DASHBOARD.md  archive  features  knowledge-pack.md  (+1 more)
hadocs/: Dockerfile  README.md  config.yaml  run.sh
installer/: HADocs.iss  HADocs.spec  (+4 more)
(+278 files in other folders)
