[project]
name = "hadocs"
version = "0.1.1"
description = "Home Assistant documentation and analysis generator"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "PyYAML>=6.0.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
