[project]
name = "hadocs"
version = "0.11.1"
description = "Home Assistant Documentation & Intelligence"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.7.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
hadocs = "src.hadocs.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"

[tool.black]
line-length = 100
